--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,6 +9,18 @@
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
   <script src='main.js'></script>
 </head>
+
 <body>
+
+  <nav>
+    <div class="logo"></div>
+    <div class="nav-first"></div>
+    <div class="nav-second"></div>
+    <div class="nav-mobile"></div>
+    <a href="" class="ad"></a>
+  </nav>
+  <div class="main"></div>
+  <footer></footer>
 </body>
+
 </html>
