created css folder and style.css file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav-first"></div>
     <div class="nav-second"></div>
     <div class="nav-mobile"></div>
-    <a href="" class="ad"></a>
+    <a href="#" class="ad"></a>
   </nav>
   <div class="main"></div>
   <footer></footer>
