correct reference to style sheet in head

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
   <script src='main.js'></script>
 </head>
 
 <body>
-
+afadsfasdf
   <nav>
     <div class="logo"></div>
     <div class="nav-first"></div>
