--- a/index.html
+++ b/index.html
@@ -11,15 +11,103 @@
 </head>
 
 <body>
-afadsfasdf
+
   <nav>
-    <div class="logo"></div>
-    <div class="nav-first"></div>
-    <div class="nav-second"></div>
-    <div class="nav-mobile"></div>
-    <a href="#" class="ad"></a>
+    <div class="logo">
+      <a href="#"></a>
+    </div>
+
+    <div class="first-nav">
+      <ul>
+        <li><a href="#">News</a></li>
+        <li><a href="#">TNW2020</a></li>
+        <li><a href="#">Business ▾</a></li>
+        <li><a href="#">AMAs</a></li>
+        <li><a href="#">Spaces</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <div class="first-nav-right">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Advertise</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Contact</a></li>
+        </div>
+      </ul>
+    </div>
+
+    <div class="second-nav">
+      <ul>
+        <li><a href="#">LATEST</a></li>
+        <li><a href="#">HARD FORK</a></li>
+        <li><a href="#">PLUGGED</a></li>
+        <li><a href="#">FUNDAMENTALS</a></li>
+        <li><a href="#">WORK 2030</a></li>
+        <li><a href="#">NEURAL</a></li>
+      </ul>
+      <div>
+        <div class="search-icon"></div>
+        <img src="" alt="tnw 2020">
+        <div>KICKS OFF IN</div>
+        <div>117</div>
+        <div>DAYS</div>
+        <button>JOIN DAYS</button>
+      </div>
+    </div>
+
+    <div class="nav-mobile">
+      <div class="wrapper">
+        <ul class="follow">
+          <li><a href="#" class="mail"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+        <div class="two-cols">
+          <div class="left-col">
+            <h5>SECTIONS</h5>
+            <ul>       
+              <li><a href="#">Latest</a></li>
+              <li><a href="#">Insights</a></li>
+              <li><a href="#">Plugged</a></li>
+              <li><a href="#">Fundamentals</a></li>
+              <li><a href="#">Work 2030</a></li>
+              <li><a href="#">ReadMe</a></li>
+              <li><a href="#">Growth Quarters</a></li>
+              <li><a href="#">Neural</a></li>
+            </ul>
+          </div>
+          <div class="right-col">
+            <h5>ABOUT TNW</h5>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Advertise</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+            </ul>
+            <h5>TNW SITES</h5>
+            <ul>
+              <li><a href="#">News</a></li>
+              <li><a href="#">TNW 2020</a></li>
+              <li><a href="#">Index</a></li>
+              <li><a href="#">TQ</a></li>
+              <li><a href="#">Deals</a></li>
+              <li><a href="#">Answers</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="ad">
+      <a href="#">Did you know we have a TECH FESTIVAL? Check it out →</a>
+    </div>
   </nav>
+
   <div class="main"></div>
+
   <footer></footer>
 </body>
 
