added images to navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <div class="logo">
-      <a href="#"></a>
+      <a href="#"><img src="images/logo.jpg"></a>
     </div>
 
     <div class="first-nav">
@@ -45,7 +45,7 @@
       </ul>
       <div>
         <div class="search-icon"></div>
-        <img src="" alt="tnw 2020">
+        <img src="images/nav_img.png" alt="tnw 2020">
         <div>KICKS OFF IN</div>
         <div>117</div>
         <div>DAYS</div>
