--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
   <nav>
     <div class="logo">
-      <a href="#"><img src="images/logo.jpg"></a>
+      <a href="#"><img src="images/tnw.svg" alt="the next web"></a>
     </div>
 
     <div class="first-nav">
       <ul>
-        <li><a href="#">News</a></li>
+        <li><a href="#" class="active">News</a></li>
         <li><a href="#">TNW2020</a></li>
         <li><a href="#">Business ▾</a></li>
         <li><a href="#">AMAs</a></li>
@@ -43,8 +43,19 @@
         <li><a href="#">WORK 2030</a></li>
         <li><a href="#">NEURAL</a></li>
       </ul>
-      <div>
-        <div class="search-icon"></div>
+      <div class="icons">
+        <ul>asdfasdf
+          <li><a href="#" class="search-icon"><i></i></a></li>
+          <li class="hamburguer">
+            <a href="#">
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="special">
         <img src="images/nav_img.png" alt="tnw 2020">
         <div>KICKS OFF IN</div>
         <div>117</div>
@@ -68,7 +79,7 @@
         <div class="two-cols">
           <div class="left-col">
             <h5>SECTIONS</h5>
-            <ul>       
+            <ul>
               <li><a href="#">Latest</a></li>
               <li><a href="#">Insights</a></li>
               <li><a href="#">Plugged</a></li>
