finished styling nav section - without menu functionality

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <li><a href="#">NEURAL</a></li>
       </ul>
       <div class="icons">
-        <ul>asdfasdf
-          <li><a href="#" class="search-icon"><i></i></a></li>
+        <ul>
+          <li><a href="#" class="search-icon"><i>S</i></a></li>
           <li class="hamburguer">
             <a href="#">
               <span></span>
