tweakings in navbar

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <article>
         <img src="" alt="">
         <a href="#" class="cover-trigger"></a>
-        <div>cover-gradient</div>
+        <div class="cover-gradient"></div>
         <div class="cover-logo"></div>
         <div>Friday — February 21, 2020</div>
         <header>
