changes to css file: responsive tweakings

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
       <div class="wrapper">
         <ul class="follow">
           <li><a href="#" class="mail"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
+          <li><a href="#"><div class="square"></div></a></li>
         </ul>
         <div class="two-cols">
           <div class="left-col">
@@ -132,7 +132,7 @@
           <h5><a href="#">Apps</a></h5>
           <h2><a href="#">No spoilers: How to mute words and phrases on Twitter</a></h2>
           <ul>
-            <li>"by " <a href="#">Rachel Kaser</a> </li>
+            <li>by <a href="#">Rachel Kaser</a> </li>
             <li> <i></i>1 hour ago</li>
             <li><i></i>0</li>
           </ul>
@@ -144,7 +144,7 @@
         <header>
           <h2><a href="#">Facebook plans to clarify when pro-Bloomberg posts come from staffers</a></h2>
           <ul>
-            <li>"by " <a href="#">Napier Lopez</a> </li>
+            <li>by <a href="#">Napier Lopez</a> </li>
             <li> <i></i>2 hours ago</li>
             <li><i></i>0</li>
           </ul>
@@ -155,7 +155,7 @@
         <header>
           <h2><a href="#">PSA: Your WhatsApp groups may not be as private as you think</a></h2>
           <ul>
-            <li>"by " <a href="#">Napier Lopez</a> </li>
+            <li>by <a href="#">Napier Lopez</a> </li>
             <li> <i></i>3 hours ago</li>
             <li><i></i>8</li>
           </ul>
@@ -166,7 +166,7 @@
         <header>
           <h2><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your phone</a></h2>
           <ul>
-            <li>"by " <a href="#">Napier Lopez</a> </li>
+            <li>by <a href="#">Napier Lopez</a> </li>
             <li> <i></i>3 hours ago</li>
             <li><i></i>0</li>
           </ul>
