--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </ul>
   </div>
   <div class="right-nav navs">
-         <a href="#"><i class='uil uil-search'>Q</i></a>
-         <img src="images/nav_img.png" class="p"> <span class="year l">2020</span>
+         <a href="#"><i class='uil uil-search'></i></a>
+         <img src="images/event-bl-tnw2020.svg" class="p">
          <a href="#" class="o"> KICK OFF IN <span class="num r"> 119 </span>DAYS </a>
          <button class="q s"> JOIN US</button></li>
     </div>
