added section2 to html

--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
             <div class="green 8"></div>
           </div>
         </section>
+
+        <section class="section2">
+          <div class="add-info">
+            <h1>Latest funding rounds on Index.co </h1>
+            <p>Add | Get updates by email | See more</p>
+          </div>
+          <div class="wrapper2">
+            <div class="blue"></div>
+            <div class="blue"></div>
+            <div class="blue"></div>
+          </div>
+        </section>
+
+
   </main>
   <footer>
   </footer>
