added all deals section

--- a/index.html
+++ b/index.html
@@ -116,15 +116,16 @@
         <p>Add | Get updates by email | See more</p>
       </div>
       <div class="wrapper2">
-        <div class="blue"></div>
-        <div class="blue"></div>
-        <div class="blue"></div>
+        <div class="lightblue"></div>
+        <div class="lightblue"></div>
+        <div class="lightblue"></div>
       </div>
     </section>
+
     <div class="articles">
       <section class="section3">
         <h2>Apps</h2>
-        <div class="black"></div>
+        <div class="black2"></div>
         <div>
           <div>
             <h4>LATEST</h4>
@@ -153,7 +154,7 @@
       </section>
       <section class="section4">
         <h2>Gear</h2>
-        <div class="black"></div>
+        <div class="black2"></div>
         <div>
           <div>
             <h4>LATEST</h4>
@@ -182,7 +183,7 @@
       </section>
       <section class="section5">
         <h2>Teach</h2>
-        <div class="black"></div>
+        <div class="black2"></div>
         <div>
           <div>
             <h4>LATEST</h4>
@@ -240,7 +241,7 @@
       </section>
       <section class="section7">
         <h2>Podium</h2>
-        <div class="black"></div>
+        <div class="black2"></div>
         <div>
           <div>
             <h4>LATEST</h4>
@@ -269,7 +270,7 @@
       </section>
       <section class="section8">
         <h2>insights</h2>
-        <div class="black"></div>
+        <div class="black2"></div>
         <div>
           <div>
             <h4>LATEST</h4>
@@ -356,6 +357,23 @@
       </section>
     </div>
 
+  
+    <section class="section4">
+      <div class="all-deals">
+        <h1>Latest dealsSee all Deals</h1>
+        <p>See All Deals</p>
+      </div>
+      <div class="wrapper4">
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+        <div class="brown"></div>
+      </div>
+    </section>
   </main>
   <footer>
   </footer>
