--- a/index.html
+++ b/index.html
@@ -99,14 +99,66 @@
     <section class="section1">
       <h1>Latest news</h1>
       <div class="wrapper">
-        <div class="green 1"></div>
-        <div class="green 2"></div>
-        <div class="green 3"></div>
-        <div class="green 4"></div>
-        <div class="green 5"></div>
-        <div class="green 6"></div>
-        <div class="green 7"></div>
-        <div class="green 8"></div>
+        <div class="green 1">
+          <a href="#"></a>
+          <h4 class="title"><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your
+              phone </a></h4>
+          <ul class="author">
+            <li>Napier Lopez</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 2"><a href="#"></a>
+          <h4 class="title"><a href="#">How to find that one Instagram filter everyone else is using</a></h4>
+          <ul class="author">
+            <li>Rachel Kaser</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 3"><a href="#"></a>
+          <h4 class="title"><a href="#">We need more colorful consoles like this pink Nintendo Switch Lite </a></h4>
+          <ul class="author">
+            <li>Rachel Kaser</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 4"><a href="#"></a>
+          <h4 class="title"><a href="#">How I use note-taking to understand my team better</a></h4>
+          <ul class="author">
+            <li>Boris Veldhuijzen van Zanten</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 5"><a href="#"></a>
+          <h4 class="title"><a href="#">UN will use AI to learn what people want from peace deals </a></h4>
+          <ul class="author">
+            <li>Thomas Macaulay</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 6"><a href="#"></a>
+          <h4 class="title"><a href="#">Video: The Canvia digital art frame is gorgeous, expensive, and flawed </a>
+          </h4>
+          <ul class="author">
+            <li>Callum Booth</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 7"><a href="#"></a>
+          <h4 class="title"><a href="#">Morgan Stanley’s $13B E-Trade buyout is the biggest bank deal since the
+              financial crash </a></h4>
+          <ul class="author">
+            <li>David Canellis</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
+        <div class="green 8"><a href="#"></a>
+          <h4 class="title"><a href="#">I hate Apple for making me shake my MacBook like a chump </a></h4>
+          <ul class="author">
+            <li>Mix</li>
+            <li>3 hours ago</li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -116,22 +168,73 @@
         <p>Add | Get updates by email | See more</p>
       </div>
       <div class="wrapper2">
-        <div class="lightblue"></div>
-        <div class="lightblue"></div>
-        <div class="lightblue"></div>
+        <div class="lightblue"><a href="#"><img src="" alt="">
+              <h4 class="investor">Pura Scents</h4>
+              <div class="details">
+                <h4 class="money"></h4>
+                <h5 class="kind"></h5>
+              </div>
+            </a>
+            <div class="card">
+              <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
+              <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a></div>
+            <ul>
+              <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
+            </ul></div>
+        <div class="lightblue">              <a href="#"><img src="" alt="">
+          <h4 class="investor">Be My Eyes</h4>
+          <div class="details">
+            <h4 class="money">$2.8M</h4>
+            <h5 class="kind">SERIES A</h5>
+          </div>
+        </a>
+        <div class="card">
+          <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
+          <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a></div>
+        <ul>
+          <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
+        </ul></div>
+        <div class="lightblue"> <a href="#"><img src="" alt="">
+          <h4 class="investor">Feather</h4>
+          <div class="details">
+            <h4 class="money">$30M</h4>
+            <h5 class="kind">SERIES B</h5>
+          </div>
+        </a>
+        <div class="card">
+          <a href="#"><i></i><span>Artiman Ventures, +5</span></a>
+          <ul>
+            <li><a href="#">UltraSense Raises $20 Million To Grow Its Ultrasound Sensor Technologies<span
+                  class="source">on Pulse 2.0</span></a></li>
+          </ul></div>
       </div>
     </section>
 
     <div class="articles">
       <section class="section3">
         <h2>Apps</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+              <article class="popular">
+                <a href="#">
+                  <div class="image"></div>
+                </a>
+                <header>
+                  <h5>Most popular</h5>
+                  <h3><a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <ul class="author">
+                    <li><a href="#">Napier Lopez</a></li>
+                    <li>21 hours ago</li>
+                  </ul>
+                </header>
+              </article>
+            </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -154,13 +257,29 @@
       </section>
       <section class="section4">
         <h2>Gear</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  I hate Apple for making me shake my MacBook like a chump</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">Mix</a></li>
+                <li>11 hours ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -183,13 +302,29 @@
       </section>
       <section class="section5">
         <h2>Teach</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  Humility, trust, and empathy: The skills needed to work with robots</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">Tim Leberecht</a></li>
+                <li>11 hours ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -212,13 +347,29 @@
       </section>
       <section class="section6">
         <h2>Creative</h2>
-        <div class="gray"></div>
+        <div class="gray"> <li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  This Amazon parody dating site is hilarious... and also kind of creepy</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">Rachel Kasser</a></li>
+                <li>16 days ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -241,13 +392,29 @@
       </section>
       <section class="section7">
         <h2>Podium</h2>
-        <div class="gray"></div>
+        <div class="gray"> <li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  How to build a survival base in Minecraft</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">Thomas Williamson</a></li>
+                <li>6 days ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -270,13 +437,29 @@
       </section>
       <section class="section8">
         <h2>insights</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  Satoshi Nakaboto: ‘Binance CEO says Bitcoin halving will raise its price’</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">Satoshi Nakaboto</a></li>
+                <li>15 hours ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -299,13 +482,30 @@
       </section>
       <section class="section9">
         <h2>Launch</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  PSA: Amazon Fresh grocery deliveries are now free for US Prime members</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">
+                    Abhimanyu Ghoshal</a></li>
+                <li>3 months ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -328,13 +528,30 @@
       </section>
       <section class="section10">
         <h2>Distract</h2>
-        <div class="gray"></div>
+        <div class="gray"><li>
+          <article class="popular">
+            <a href="#">
+              <div class="image"></div>
+            </a>
+            <header>
+              <h5>Most popular</h5>
+              <h3><a href="#">
+                  Rumor: Call of Duty to launch free 'Warzone' battle royale game as early as February 18</a>
+              </h3>
+              <ul class="author">
+                <li><a href="#">
+                    Tristan Greene</a></li>
+                <li>4 days ago</li>
+              </ul>
+            </header>
+          </article>
+        </li></div>
         <div>
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
           </div>
-          <div></div>
+          <div class="mini-image"></div>
         </div>
         <ul>
           <li class="headline">
@@ -357,21 +574,78 @@
       </section>
     </div>
 
-  
-    <section class="section11">  <!-- class name changed to "section11" because I already have used "section4"-->
+
+    <section class="section11">
+      <!-- class name changed to "section11" because I already have used "section4"-->
       <div class="all-deals">
         <h1>Latest dealsSee all Deals</h1>
         <p>See All Deals</p>
       </div>
       <div class="wrapper4">
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
-        <div class="brown"></div>
+        <div class="brown"><a href="#"></a>
+          <div></div>
+          <h4></h4>
+          <div class="discount">
+            <div>98% off</div>
+          </div>
+          <h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
+          <div class="price"><span class="old">$1405 </span><span> $31</span></div></div>
+        <div class="brown"><div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>96% off</div>
+          </div>
+          <h4><a href="#">The Complete Adobe CC Training Bundle</a></h4>
+          <div class="price"><span class="old">$673 </span><span> $29</span></div>
+        </div></div>
+        <div class="brown"> <div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>96% off</div>
+          </div>
+          <h4><a href="#">The Complete AWS Dev & Ops Certification Training Bundle</a></h4>
+          <div class="price"><span class="old">$796 </span><span> $29.96</span></div>
+        </div></div>
+        <div class="brown">            <div class="story-deal">
+          <a href="#"></a>
+          <h4><a href="#">Learn How to Draw Freebie Bundle</a></h4>
+          <div class="price"><span class="old">$0 </span><span> $0</span></div>
+        </div></div>
+        <div class="brown"><div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>89% off</div>
+          </div>
+          <h4><a href="#">12min Micro Book Library: Lifetime Premium Subscription</a></h4>
+          <div class="price"><span class="old">$346.50 </span><span> $39</span></div>
+        </div></div>
+        <div class="brown"> <div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>80% off</div>
+          </div>
+          <h4><a href="#">KeepSolid VPN Unlimited: Lifetime Subscription
+            </a></h4>
+          <div class="price"><span class="old">$199.99 </span><span> $39</span></div>
+        </div></div>
+        <div class="brown"> <div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>100% off</div>
+          </div>
+          <h4><a href="#">Shaw Academy: FREE 4-Week Course
+            </a></h4>
+          <div class="price"><span class="old">$49.99 </span><span> $0</span></div>
+        </div></div>
+        <div class="brown"><div class="story-deal">
+          <a href="#"></a>
+          <div class="discount">
+            <div>95% off</div>
+          </div>
+          <h4><a href="#">ThunderDrive Cloud Storage: Lifetime Subscription
+            </a></h4>
+          <div class="price"><span class="old">$1200 </span><span> $59</span></div>
+        </div></div>
       </div>
     </section>
   </main>
