added sticker config

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-  <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='./css/styles.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='./css/mediaquery.css'>
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.0.1/css/unicons.css">
   <script src='main.js'></script>
 </head>
@@ -582,7 +582,8 @@
         <p>See All Deals</p>
       </div>
       <div class="wrapper4">
-        <div class="brown"><a href="#"></a>
+        <div class="brown">
+          <a href="#"></a>
           <div></div>
           <h4></h4>
           <div class="discount">
@@ -637,7 +638,8 @@
             </a></h4>
           <div class="price"><span class="old">$49.99 </span><span> $0</span></div>
         </div></div>
-        <div class="brown"><div class="story-deal">
+        <div class="brown">
+          <div class="story-deal">
           <a href="#"></a>
           <div class="discount">
             <div>95% off</div>
