styled headings of sections

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         </ul>
       </section>
       <section class="section8">
-        <h2>insights</h2>
+        <h2>Insights</h2>
         <div class="gray">
           <li>
             <article class="popular">
