insertd images into section articles

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </ul>
       </section>
       <section class="section5">
-        <h2>Teach</h2>
+        <h2>Tech</h2>
         <div class="gray">
           <li>
             <article class="popular">
