rearranged grid in top section, so it contains images

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <main>
     <div class="container">
       <div class="black">
+        <div></div>
         <p>Thursday — February 20, 2020</p>
         <p>INSIGHTS</p>
         <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
