play with contents of black section

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
     <div class="container">
       <div class="black">
         <div></div>
-        <p>Thursday — February 20, 2020</p>
-        <p>INSIGHTS</p>
-        <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
-        <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        <header>
+          <p>Thursday — February 20, 2020</p>
+          <p>INSIGHTS</p>
+          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
+          <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        </header>
       </div>
       <div class="blue">
         <p>INSIGHTS</p>
@@ -749,4 +751,5 @@
 
   </footer>
 </body>
+
 </html>
