done with images and text positionning in section 1

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <section class="section1">
       <h1>Latest news</h1>
       <div class="wrapper">
-        <div class="green 1">
-          <a href="#"></a>
+        <div class="green1">
+          <a href="#"><div></div></a>
           <h4 class="title"><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your
               phone </a></h4>
           <ul class="author">
@@ -110,35 +110,35 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 2"><a href="#"></a>
+        <div class="green2"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">How to find that one Instagram filter everyone else is using</a></h4>
           <ul class="author">
             <li>Rachel Kaser</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 3"><a href="#"></a>
+        <div class="green3"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">We need more colorful consoles like this pink Nintendo Switch Lite </a></h4>
           <ul class="author">
             <li>Rachel Kaser</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 4"><a href="#"></a>
+        <div class="green4"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">How I use note-taking to understand my team better</a></h4>
           <ul class="author">
             <li>Boris Veldhuijzen van Zanten</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 5"><a href="#"></a>
+        <div class="green5"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">UN will use AI to learn what people want from peace deals </a></h4>
           <ul class="author">
             <li>Thomas Macaulay</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 6"><a href="#"></a>
+        <div class="green6"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">Video: The Canvia digital art frame is gorgeous, expensive, and flawed </a>
           </h4>
           <ul class="author">
@@ -146,7 +146,7 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 7"><a href="#"></a>
+        <div class="green7"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">Morgan Stanley’s $13B E-Trade buyout is the biggest bank deal since the
               financial crash </a></h4>
           <ul class="author">
@@ -154,7 +154,7 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green 8"><a href="#"></a>
+        <div class="green8"><a href="#"><div></div></a>
           <h4 class="title"><a href="#">I hate Apple for making me shake my MacBook like a chump </a></h4>
           <ul class="author">
             <li>Mix</li>
