inserted all images and posistion elements on all sections

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
       <h1>Latest news</h1>
       <div class="wrapper">
         <div class="green1">
-          <a href="#"><div></div></a>
+          <a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your
               phone </a></h4>
           <ul class="author">
@@ -110,35 +112,45 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green2"><a href="#"><div></div></a>
+        <div class="green2"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">How to find that one Instagram filter everyone else is using</a></h4>
           <ul class="author">
             <li>Rachel Kaser</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green3"><a href="#"><div></div></a>
+        <div class="green3"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">We need more colorful consoles like this pink Nintendo Switch Lite </a></h4>
           <ul class="author">
             <li>Rachel Kaser</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green4"><a href="#"><div></div></a>
+        <div class="green4"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">How I use note-taking to understand my team better</a></h4>
           <ul class="author">
             <li>Boris Veldhuijzen van Zanten</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green5"><a href="#"><div></div></a>
+        <div class="green5"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">UN will use AI to learn what people want from peace deals </a></h4>
           <ul class="author">
             <li>Thomas Macaulay</li>
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green6"><a href="#"><div></div></a>
+        <div class="green6"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">Video: The Canvia digital art frame is gorgeous, expensive, and flawed </a>
           </h4>
           <ul class="author">
@@ -146,7 +158,9 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green7"><a href="#"><div></div></a>
+        <div class="green7"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">Morgan Stanley’s $13B E-Trade buyout is the biggest bank deal since the
               financial crash </a></h4>
           <ul class="author">
@@ -154,7 +168,9 @@
             <li>3 hours ago</li>
           </ul>
         </div>
-        <div class="green8"><a href="#"><div></div></a>
+        <div class="green8"><a href="#">
+            <div></div>
+          </a>
           <h4 class="title"><a href="#">I hate Apple for making me shake my MacBook like a chump </a></h4>
           <ul class="author">
             <li>Mix</li>
@@ -170,21 +186,24 @@
         <p>Add | Get updates by email | See more</p>
       </div>
       <div class="wrapper2">
-        <div class="lightblue"><a href="#"><img src="" alt="">
+        <div class="lightblue">
+          <a href="#">
+            <img src="images/section2-1.jfif" alt="logo bioscience">
             <h4 class="investor">Pura Scents</h4>
             <div class="details">
-              <h4 class="money"></h4>
-              <h5 class="kind"></h5>
+              <h4 class="money">$6M</h4>
+              <h5 class="kind">SERIES A</h5>
             </div>
           </a>
           <div class="card">
             <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
-            <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a></div>
+            <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a>
+          </div>
           <ul>
             <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
           </ul>
         </div>
-        <div class="lightblue"> <a href="#"><img src="" alt="">
+        <div class="lightblue"> <a href="#"><img src="images/section2-2.jfif" alt="logo biodesign">
             <h4 class="investor">Be My Eyes</h4>
             <div class="details">
               <h4 class="money">$2.8M</h4>
@@ -198,7 +217,7 @@
             <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
           </ul>
         </div>
-        <div class="lightblue"> <a href="#"><img src="" alt="">
+        <div class="lightblue"> <a href="#"><img src="images/section2-3.jfif" alt="logo highview power">
             <h4 class="investor">Feather</h4>
             <div class="details">
               <h4 class="money">$30M</h4>
@@ -213,7 +232,8 @@
             </ul>
           </div>
         </div>
-        <div class="lightblue lastlightblue"> <a href="#"><img src="" alt="">
+        <div class="lightblue lastlightblue">
+          <a href="#"><img src="images/section2-4.jfif" alt="logo newleaf">
             <h4 class="investor">Feather</h4>
             <div class="details">
               <h4 class="money">$30M</h4>
@@ -618,81 +638,61 @@
         <p>See All Deals</p>
       </div>
       <div class="wrapper4">
-        <div class="brown">
-          <a href="#"></a>
-          <div></div>
+        <div class="brown1">
+          <a href="#"><div></div></a>
+          
           <h4></h4>
-          <div class="discount">
-            <div>98% off</div>
-          </div>
-          <h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
-          <div class="price"><span class="old">$1405 </span><span> $31</span></div>
+          <div><h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
+          <div class="price"><span class="old">$1405 </span><span> $31</span></div></div>
+          
         </div>
-        <div class="brown">
+        <div class="brown2">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>96% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">The Complete Adobe CC Training Bundle</a></h4>
             <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown3">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>96% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">The Complete AWS Dev & Ops Certification Training Bundle</a></h4>
             <div class="price"><span class="old">$796 </span><span> $29.96</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown4">
           <div class="story-deal">
-            <a href="#"></a>
+            <a href="#"><div></div></a>
             <h4><a href="#">Learn How to Draw Freebie Bundle</a></h4>
             <div class="price"><span class="old">$0 </span><span> $0</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown5">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>89% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">12min Micro Book Library: Lifetime Premium Subscription</a></h4>
             <div class="price"><span class="old">$346.50 </span><span> $39</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown6">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>80% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">KeepSolid VPN Unlimited: Lifetime Subscription
               </a></h4>
             <div class="price"><span class="old">$199.99 </span><span> $39</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown7">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>100% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">Shaw Academy: FREE 4-Week Course
               </a></h4>
             <div class="price"><span class="old">$49.99 </span><span> $0</span></div>
           </div>
         </div>
-        <div class="brown">
+        <div class="brown8">
           <div class="story-deal">
-            <a href="#"></a>
-            <div class="discount">
-              <div>95% off</div>
-            </div>
+            <a href="#"><div></div></a>
             <h4><a href="#">ThunderDrive Cloud Storage: Lifetime Subscription
               </a></h4>
             <div class="price"><span class="old">$1200 </span><span> $59</span></div>
@@ -703,7 +703,7 @@
   </main>
 
   <footer>
-    <div class="wrapper">
+    <div class="wrapper5">
       <div class="links">
         <div class="social">
           <ul>
