--- a/index.html
+++ b/index.html
@@ -77,25 +77,31 @@
   <main>
     <div class="container">
       <div class="black">
-        <div></div>
+        <div>
+          <div class="logo-article"></div>
+          <span>Tuesday — February 25, 2029</span>
+        </div>
         <header>
-          <p>Thursday — February 20, 2020</p>
           <p>INSIGHTS</p>
-          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
+          <h2>Meet the green tech leaders catastrophe at TNW2020</h2>
           <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
         </header>
       </div>
       <div class="blue">
-        <p>INSIGHTS</p>
-        <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
-        <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        <div>
+          <p>INSIGHTS</p>
+          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
+          <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        </div>
       </div>
       <div class="yellow">
-        <i class='uil uil-play-circle'></i>
-        <i class='uil uil-apps'></i>
-        <p>INSIGHTS</p>
-        <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
-        <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        <div>
+          <i class='uil uil-play-circle'></i>
+          <i class='uil uil-apps'></i>
+          <p>INSIGHTS</p>
+          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
+          <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
+        </div>
       </div>
     </div>
     <section class="section1">
@@ -639,44 +645,58 @@
       </div>
       <div class="wrapper4">
         <div class="brown1">
-          <a href="#"><div></div></a>
-          
+          <a href="#">
+            <div></div>
+          </a>
+
           <h4></h4>
-          <div><h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
-          <div class="price"><span class="old">$1405 </span><span> $31</span></div></div>
-          
+          <div>
+            <h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
+            <div class="price"><span class="old">$1405 </span><span> $31</span></div>
+          </div>
+
         </div>
         <div class="brown2">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">The Complete Adobe CC Training Bundle</a></h4>
             <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="brown3">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">The Complete AWS Dev & Ops Certification Training Bundle</a></h4>
             <div class="price"><span class="old">$796 </span><span> $29.96</span></div>
           </div>
         </div>
         <div class="brown4">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">Learn How to Draw Freebie Bundle</a></h4>
             <div class="price"><span class="old">$0 </span><span> $0</span></div>
           </div>
         </div>
         <div class="brown5">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">12min Micro Book Library: Lifetime Premium Subscription</a></h4>
             <div class="price"><span class="old">$346.50 </span><span> $39</span></div>
           </div>
         </div>
         <div class="brown6">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">KeepSolid VPN Unlimited: Lifetime Subscription
               </a></h4>
             <div class="price"><span class="old">$199.99 </span><span> $39</span></div>
@@ -684,7 +704,9 @@
         </div>
         <div class="brown7">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">Shaw Academy: FREE 4-Week Course
               </a></h4>
             <div class="price"><span class="old">$49.99 </span><span> $0</span></div>
@@ -692,7 +714,9 @@
         </div>
         <div class="brown8">
           <div class="story-deal">
-            <a href="#"><div></div></a>
+            <a href="#">
+              <div></div>
+            </a>
             <h4><a href="#">ThunderDrive Cloud Storage: Lifetime Subscription
               </a></h4>
             <div class="price"><span class="old">$1200 </span><span> $59</span></div>
