changes to typography

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <header>
           <p>INSIGHTS</p>
-          <h2>Meet the green tech leaders catastrophe at TNW2020</h2>
+          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
           <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
         </header>
       </div>
