added more styles and made more responsive

--- a/index.html
+++ b/index.html
@@ -77,22 +77,20 @@
   <main>
     <div class="container">
       <div class="black">
-        <div></div>
-        <header>
-          <p>Thursday — February 20, 2020</p>
-          <p>INSIGHTS</p>
-          <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
-          <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
-        </header>
+          <div class="svg-tnw"></div>
+          <div class="black-text">
+          <p class="black-date">Thursday — February 20, 2020</p>
+          <p class="insight insightp">INSIGHTS</p>
+          <h2 class="intro-text">Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
+          <p class="insight">by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
       </div>
+    </div>
       <div class="blue">
         <p>INSIGHTS</p>
         <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
         <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
       </div>
       <div class="yellow">
-        <i class='uil uil-play-circle'></i>
-        <i class='uil uil-apps'></i>
         <p>INSIGHTS</p>
         <h2>Meet the green tech leaders saving us from climate catastrophe at TNW2020</h2>
         <p>by Tuesday <i class='uil uil-clock'></i> 35 minutes ago <i class='uil uil-share-alt'></i> 0</p>
@@ -103,7 +101,7 @@
       <div class="wrapper">
         <div class="green1">
           <a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your
               phone </a></h4>
@@ -113,7 +111,7 @@
           </ul>
         </div>
         <div class="green2"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">How to find that one Instagram filter everyone else is using</a></h4>
           <ul class="author">
@@ -122,7 +120,7 @@
           </ul>
         </div>
         <div class="green3"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">We need more colorful consoles like this pink Nintendo Switch Lite </a></h4>
           <ul class="author">
@@ -131,7 +129,7 @@
           </ul>
         </div>
         <div class="green4"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">How I use note-taking to understand my team better</a></h4>
           <ul class="author">
@@ -140,7 +138,7 @@
           </ul>
         </div>
         <div class="green5"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">UN will use AI to learn what people want from peace deals </a></h4>
           <ul class="author">
@@ -149,7 +147,7 @@
           </ul>
         </div>
         <div class="green6"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">Video: The Canvia digital art frame is gorgeous, expensive, and flawed </a>
           </h4>
@@ -159,7 +157,7 @@
           </ul>
         </div>
         <div class="green7"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">Morgan Stanley’s $13B E-Trade buyout is the biggest bank deal since the
               financial crash </a></h4>
@@ -169,7 +167,7 @@
           </ul>
         </div>
         <div class="green8"><a href="#">
-            <div></div>
+            <div class="img-section"></div>
           </a>
           <h4 class="title"><a href="#">I hate Apple for making me shake my MacBook like a chump </a></h4>
           <ul class="author">
