--- a/index.html
+++ b/index.html
@@ -201,11 +201,18 @@
         </div>
       </div>
     </section>
-
+    
     <section class="section2">
       <div class="add-info">
         <h1>Latest funding rounds on Index.co </h1>
-        <p>Add | Get updates by email | See more</p>
+        <ul>
+          <li><a href="#">Add info</a></li>
+          <li><a href="#">|</a></li>
+          <li><a href="#">Get updates by email</a></li>
+          <li><a href="#">|</a></li>
+          <li><a href="#">See more</a></li>
+        </ul>
+        
       </div>
       <div class="wrapper2">
         <div class="lightblue">
@@ -222,10 +229,12 @@
             <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a>
           </div>
           <ul>
-            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
+            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source"> on FinSMEs</span></a></li>
           </ul>
         </div>
-        <div class="lightblue"> <a href="#"><img src="images/section2-2.jfif" alt="logo biodesign">
+        <div class="lightblue">
+          <a href="#">
+            <img src="images/section2-2.jfif" alt="logo biodesign">
             <h4 class="investor">Be My Eyes</h4>
             <div class="details">
               <h4 class="money">$2.8M</h4>
@@ -236,39 +245,41 @@
             <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
             <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a></div>
           <ul>
-            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source">on FinSMEs</span></a></li>
+            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source"> on FinSMEs</span></a></li>
           </ul>
         </div>
-        <div class="lightblue"> <a href="#"><img src="images/section2-3.jfif" alt="logo highview power">
-            <h4 class="investor">Feather</h4>
+        <div class="lightblue">
+          <a href="#">
+            <img src="images/section2-1.jfif" alt="logo bioscience">
+            <h4 class="investor">Pura Scents</h4>
             <div class="details">
-              <h4 class="money">$30M</h4>
-              <h5 class="kind">SERIES B</h5>
+              <h4 class="money">$6M</h4>
+              <h5 class="kind">SERIES A</h5>
             </div>
           </a>
           <div class="card">
-            <a href="#"><i></i><span>Artiman Ventures, +5</span></a>
-            <ul>
-              <li><a href="#">UltraSense Raises $20 Million To Grow Its Ultrasound Sensor Technologies<span
-                    class="source">on Pulse 2.0</span></a></li>
-            </ul>
+            <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
+            <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a>
           </div>
+          <ul>
+            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source"> on FinSMEs</span></a></li>
+          </ul>
         </div>
         <div class="lightblue lastlightblue">
-          <a href="#"><img src="images/section2-4.jfif" alt="logo newleaf">
-            <h4 class="investor">Feather</h4>
+          <a href="#">
+            <img src="images/section2-2.jfif" alt="logo biodesign">
+            <h4 class="investor">Be My Eyes</h4>
             <div class="details">
-              <h4 class="money">$30M</h4>
-              <h5 class="kind">SERIES B</h5>
+              <h4 class="money">$2.8M</h4>
+              <h5 class="kind">SERIES A</h5>
             </div>
           </a>
           <div class="card">
-            <a href="#"><i></i><span>Artiman Ventures, +5</span></a>
-            <ul>
-              <li><a href="#">UltraSense Raises $20 Million To Grow Its Ultrasound Sensor Technologies<span
-                    class="source">on Pulse 2.0</span></a></li>
-            </ul>
-          </div>
+            <a href="#"><i></i><span>Consumer Electronics, +2</span></a>
+            <a href="#"><i></i><span>Kickstart Seed Fund, +5</span></a></div>
+          <ul>
+            <li><a href="#">Pura Raises $4.4M in Seed Funding<span class="source"> on FinSMEs</span></a></li>
+          </ul>
         </div>
     </section>
 
@@ -293,7 +304,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -340,7 +351,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -387,7 +398,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -434,7 +445,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -481,7 +492,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -528,7 +539,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -576,7 +587,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
@@ -624,7 +635,7 @@
             </article>
           </li>
         </div>
-        <div>
+        <div class="latest">
           <div>
             <h4>LATEST</h4>
             <h5>How to find that one Instagram filter everyone else is using</h5>
