added color to all-deals class

--- a/index.html
+++ b/index.html
@@ -651,7 +651,10 @@
     </div>
 
     <section class="section1">
-      <h1>Latest news</h1>
+      <div class="all-deals">
+        <h1>Latest deals</h1>
+        <p>See All Deals</p>
+      </div>
       <div class="wrapper">
         <div class="green1 greens">
 
