--- a/index.html
+++ b/index.html
@@ -665,10 +665,7 @@
           <div>
             <h4 class="title"><a href="#">Android 11 lets you assign shortcuts to a double-tap on the back of your
                 phone </a></h4>
-            <ul class="author">
-              <li>Napier Lopez</li>
-              <li>3 hours ago</li>
-            </ul>
+                <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green2 greens">
@@ -679,10 +676,7 @@
 
           <div>
             <h4 class="title"><a href="#">How to find that one Instagram filter everyone else is using</a></h4>
-            <ul class="author">
-              <li>Rachel Kaser</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green3 greens"><a href="#">
@@ -690,10 +684,7 @@
           </a>
           <div>
             <h4 class="title"><a href="#">We need more colorful consoles like this pink Nintendo Switch Lite </a></h4>
-            <ul class="author">
-              <li>Rachel Kaser</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green4 greens"><a href="#">
@@ -701,10 +692,7 @@
           </a>
           <div>
             <h4 class="title"><a href="#">How I use note-taking to understand my team better</a></h4>
-            <ul class="author">
-              <li>Boris Veldhuijzen van Zanten</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green5 greens"><a href="#">
@@ -712,10 +700,7 @@
           </a>
           <div>
             <h4 class="title"><a href="#">UN will use AI to learn what people want from peace deals </a></h4>
-            <ul class="author">
-              <li>Thomas Macaulay</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green6 greens"><a href="#">
@@ -724,10 +709,7 @@
           <div>
             <h4 class="title"><a href="#">Video: The Canvia digital art frame is gorgeous, expensive, and flawed </a>
             </h4>
-            <ul class="author">
-              <li>Callum Booth</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green7 greens"><a href="#">
@@ -736,10 +718,7 @@
           <div>
             <h4 class="title"><a href="#">Morgan Stanley’s $13B E-Trade buyout is the biggest bank deal since the
                 financial crash </a></h4>
-            <ul class="author">
-              <li>David Canellis</li>
-              <li>3 hours ago</li>
-            </ul>
+                <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
         <div class="green8 greens"><a href="#">
@@ -747,10 +726,7 @@
           </a>
           <div>
             <h4 class="title"><a href="#">I hate Apple for making me shake my MacBook like a chump </a></h4>
-            <ul class="author">
-              <li>Mix</li>
-              <li>3 hours ago</li>
-            </ul>
+            <div class="price"><span class="old">$673 </span><span> $29</span></div>
           </div>
         </div>
       </div>
