--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet' type='text/css' media='screen' href='./css/styles.css'>
   <link rel='stylesheet' type='text/css' media='screen' href='./css/mediaquery.css'>
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.0.1/css/unicons.css">
-  <script src='main.js'></script>
+  <script src="https://kit.fontawesome.com/03774beff9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -731,95 +731,6 @@
         </div>
       </div>
     </section>
-
-
-    <!-- <section class="section11">
-      
-      <div class="all-deals">
-        <h1>Latest dealsSee all Deals</h1>
-        <p>See All Deals</p>
-      </div>
-      <div class="wrapper4">
-        <div class="brown1">
-          <a href="#">
-            <div></div>
-          </a>
-
-          <h4></h4>
-          <div>
-            <h4><a href="#">The Ultimate Cisco Networking Expert Certification Training Bundle</a></h4>
-            <div class="price"><span class="old">$1405 </span><span> $31</span></div>
-          </div>
-
-        </div>
-        <div class="brown2">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">The Complete Adobe CC Training Bundle</a></h4>
-            <div class="price"><span class="old">$673 </span><span> $29</span></div>
-          </div>
-        </div>
-        <div class="brown3">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">The Complete AWS Dev & Ops Certification Training Bundle</a></h4>
-            <div class="price"><span class="old">$796 </span><span> $29.96</span></div>
-          </div>
-        </div>
-        <div class="brown4">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">Learn How to Draw Freebie Bundle</a></h4>
-            <div class="price"><span class="old">$0 </span><span> $0</span></div>
-          </div>
-        </div>
-        <div class="brown5">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">12min Micro Book Library: Lifetime Premium Subscription</a></h4>
-            <div class="price"><span class="old">$346.50 </span><span> $39</span></div>
-          </div>
-        </div>
-        <div class="brown6">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">KeepSolid VPN Unlimited: Lifetime Subscription
-              </a></h4>
-            <div class="price"><span class="old">$199.99 </span><span> $39</span></div>
-          </div>
-        </div>
-        <div class="brown7">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">Shaw Academy: FREE 4-Week Course
-              </a></h4>
-            <div class="price"><span class="old">$49.99 </span><span> $0</span></div>
-          </div>
-        </div>
-        <div class="brown8">
-          <div class="story-deal">
-            <a href="#">
-              <div></div>
-            </a>
-            <h4><a href="#">ThunderDrive Cloud Storage: Lifetime Subscription
-              </a></h4>
-            <div class="price"><span class="old">$1200 </span><span> $59</span></div>
-          </div>
-        </div>
-      </div>
-    </section> -->
   </main>
 
   <footer>
@@ -827,26 +738,40 @@
       <div class="links">
         <div class="social">
           <ul>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fab fa-facebook-square soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fab fa-twitter-square soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fab fa-youtube-square soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fab fa-instagram soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fab fa-pinterest-square soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fas fa-wifi soci-icons"></i>
+                </div>
               </a></li>
-            <li><a href="#"><i></i>
-                <div class="circle"></div>
+            <li><a href="#">
+                <div class="circle">
+                    <i class="fas fa-envelope soci-icons"></i>
+                </div>
               </a></li>
           </ul>
         </div>
